# kubeflow-ppc64le-examples

./: README.md  SETUP.ipynb
CLI Interface/: create_my_config.ipynb
configure_tensorboard_component/: configure_tensorboard.ipynb  configure_tensorboard_component.yaml
deploy_triton_inference_service_component/: deploy_triton_inference_service.ipynb  deploy_triton_inference_service_component.yaml
distributed_training/: fix.json
distributed_training/pytorch/pytorch_distributed_kf_tools/: pyproject.toml
distributed_training/pytorch/pytorch_distributed_kf_tools/src/pytorch_distributed_kf_tools/: deploy.py  event_logger.py  pod_log_streamer.py  template.py
explain/: Build_Credit_Risk_Model.yaml  Deploy_Model_Monitoring.ipynb  Deploy_Model_Pipeline.ipynb  Inference.yaml  Monitor_Credit_Risk_AI.yaml  Pipeline.ipynb  README.md  SETUP.ipynb  create_lots_of_accounts_in_parallel.ipynb  db2-secret.yaml  deploy_app.yaml  deploy_app_db2.yaml  deploy_app_postgresql.yaml  deploy_app_postgress.yaml  explainer.py  inference_service.py  load_test.ipynb  monitoring_pipeline.ipynb  monitoring_queries.txt  transformer_service.py
explain/db2/: README.md  (+3 more)
inference_at_scale/: Monkey Classification Pipeline.ipynb
k8s-volumes/: download_image_to_pvc.yaml  upload-model-pipeline.yaml  upload-model-with-blackboard.yaml  volume_example.ipynb
natural-language-processing/: nlp-question-answering-inference-example.ipynb
object-detection-yolov5/: Bee detector pipeline.yaml  deploy_inference_service.ipynb  deploy_triton_inference_service_component.yaml  pytorchjobs.ipynb  yolov5.ipynb
(+185 files in other folders)
