[build-system]
requires = ["setuptools>=61.0", "kubernetes>=26.1.0", "kubeflow-training==1.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_distributed_kf_tools"
version = "0.0.2"
dynamic = ["dependencies"]
authors = [
  { name="Nick Lawrence", email="ntl@us.ibm.com" },
]
description = "Tools to deploy Distributed PyTorch in a KubeFlow pipeline"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}